# coinduction-examples

./: .gitignore  CodeMeta.json  Makefile  README.md  TODO.txt  _CoqProject  automata.v  ccs.v  coq-coinduction-examples.opam  divergence.v  gpaco.v  rocq-coinduction-examples.opam  streams.v
